# charlottek

./: .gitignore  Makefile  README.md  REUSE.toml  SETUP.md  limine.conf
charlottek/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
charlottek/.cargo/: config.toml
charlottek/linker/: aarch64.ld  riscv64.ld  x86_64.ld
charlottek/src/: main.rs  panic.rs
charlottek/src/access/: mod.rs
charlottek/src/access/ephemeral/: isolation_domain.rs  mod.rs
charlottek/src/access/persistent/: mod.rs  user.rs
charlottek/src/capability/: mod.rs
charlottek/src/cpu/: mod.rs
charlottek/src/drivers/: mod.rs
charlottek/src/event/: mod.rs
charlottek/src/framebuffer/: console.rs  framebuffer.rs
charlottek/src/init/: mod.rs
charlottek/src/isa/: mod.rs
charlottek/src/klib/: constants.rs  mod.rs  raw_mutex.rs  vector.rs
charlottek/src/lib/: bitwise.rs  mod.rs
charlottek/src/log/: mod.rs
charlottek/src/memory/: allocator.rs  mod.rs
charlottek/src/multiprocessing/: mod.rs
charlottek/src/process_mgmt/: mod.rs
charlottek/src/scheduler/: mod.rs  thread.rs
charlottek/src/self_test/: mod.rs
charlottek/src/threading/: mod.rs  thread.rs
charlottek/src/tsmp/: mod.rs  mp.rs  threading.rs
morphism/: Cargo.toml  rustfmt.toml
morphism/.cargo/: config.toml
morphism/src/: main.rs
morphism/src/common/: cell.rs  mod.rs  raw_mutex.rs  traits.rs  vector.rs
morphism/src/framebuffer/: console.rs  framebuffer.rs
morphism/src/init/: mod.rs
morphism/src/log/: mod.rs
morphism/src/memory/: allocator.rs  mod.rs
morphism/src/self_test/: mod.rs
nova/: Cargo.toml
(+232 files in other folders)
