[package]
name = "charlottek"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "charlottek"
test = false
bench = false

[build-dependencies]

[dependencies]
gcd = ">=2.3.0"
hashbrown = ">=0.15.4"
lazy_static = {version = ">=1.5.0", features = ["spin_no_std"]}
limine = ">=0.5.0"
lock_api = {version = ">=0.4.13"}
pack_bools = "0.1.2"
spin = {version = ">=0.10.0", features = ["ticket_mutex", "lock_api"]}
talc = {version = ">=4.4.3"}

[profile.dev]
debug = "full"
debug-assertions = true
panic = "abort"
lto = true
opt-level = 3

[profile.release]
debug = "none"
debug-assertions = false
panic = "abort"
lto = true
opt-level = 3
