[package]
name = "morphism"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "morphism"
test = false
bench = false

[build-dependencies]

[dependencies]
lazy_static = {version = ">=1.5.0", features = ["spin_no_std"]}
limine = ">=0.3.1"
embedded-graphics = "*"
flanterm_bindings = ">=1.1.4"
flat_device_tree = ">=3.1.1"
gcd = "2.3.0"
spin = {version = ">=0.9.8", features = ["ticket_mutex"]}
talc = "4.4.2"

[profile.dev]
debug = "full"
debug-assertions = true
panic = "abort"
lto = false
opt-level = 0

[profile.release]
debug = "none"
debug-assertions = false
panic = "abort"
lto = true
opt-level = 3
